# CountryBotWebsite

./: README.md  main.py  mongomethods.py  pyproject.toml
static/: main.json
templates/: 404.html  botdata.html  layout.html  main.html  premium.html  response.html  users.html
